Weight paint gradient tool paints over hidden vertices #113798

Closed
opened 2023-10-17 03:38:04 +02:00 by Daniel Salazar · 2 comments
Member

System Information
Operating system: Linux-6.2.0-20-generic-x86_64-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.54.03

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-16 20:26, hash: f20e38d42216

Short description of error
Weight paint gradient tool paints even on vertices that are hidden.

Exact steps for others to reproduce the error
Gradient.blend
Paint
Unhide (Alt H)

**System Information** Operating system: Linux-6.2.0-20-generic-x86_64-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.54.03 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-16 20:26, hash: `f20e38d42216` **Short description of error** Weight paint gradient tool paints even on vertices that are hidden. **Exact steps for others to reproduce the error** [Gradient.blend](/attachments/80ac91bd-7226-4ba0-968b-c11b5d533ba2) Paint Unhide (Alt H)
Daniel Salazar added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-17 03:38:04 +02:00
Member

Thanks for the report. I can confirm

Thanks for the report. I can confirm
Member

Will look into this

Will look into this
Philipp Oeser self-assigned this 2023-10-17 12:06:19 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-20 14:22:28 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113798
No description provided.